# climate_risk_index

./: README.md  main.py  pyproject.toml
diretorios/climate_risk_index/: .gitignore
diretorios/climate_risk_index/app/: app.py
diretorios/climate_risk_index/data/processed_data/: exposure_per_capita_normalized_sc_2025.csv  exposure_sc_2025.csv  hazard_sc_2025.csv  hazard_sc_2025_normalized.csv  hhi.csv  hhi_normalized.csv
diretorios/climate_risk_index/data/raw_data/shapes/: LEIA-ME.txt  SC_Municipios_2025.dbf  SC_Municipios_2025.shx
diretorios/climate_risk_index/outputs/: climate_risk_index_sc_2025.csv  climate_risk_index_sc_2025_new.csv  climate_risk_ranking_sc_2025.csv  climate_risk_ranking_sc_2025_new.csv  dashboard_dataset_sc_2025.csv  exposure_index_per_capita_sc_2025.csv  hazard_index_2025.csv  vulnerability_index_sc_2025.csv
diretorios/climate_risk_index/script/: climate_risk_index.py  exposure.py  hazard.py  process_data.py  vulnerability.py
diretorios/testing/notebooks/: notebook.ipynb
