[project]
name = "projetos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "geopandas>=1.1.3",
    "h5netcdf>=1.8.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.4",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "rasterio>=1.5.0",
    "rioxarray>=0.22.0",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "streamlit>=1.56.0",
    "xarray>=2026.2.0",
]
